--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  ORG_NAME: ${{ github.organization }}
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -40,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.ORG_NAME }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v5.3.0
