--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker images
-        if: github.ref_type = 'tag'
+        if: github.ref_type == 'tag'
         uses: docker/build-push-action@v5.3.0
         with:
           context: .
